--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,6 +15,14 @@
     <p>Şu anda da eski bilgilerimi tekrar etmek ve aktif bir repoya sahip olmak için Kodluyoruz Front-End 101 eğitimi alıyorum.</p>
 
     <h2>İlgilendiğim Alanlar</h2>
-    <p></p>
+    <p>Yazılım ve İşaretleme Dilleri</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>C</li>
+        <li>C#</li>
+        <li>MySQL</li>
+    </ul>
 </body>
 </html>
