--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Adım Soyadım-->
     <h1>Çağrı Orcan</h1>
+    <!-- Kendimden Bahsedeceğim Bölüm-->
     <h2>Hakkımda</h2>
     <p>Ben Çağrı Orcan. 23 yaşındayım. Beykent Üniversitesi Yönetim Bilişim Sistemleri 4.sınıf öğrencisiyim. 
         ebebek Everest Yolculuğu Programı kapsamında part-time olarak çalışıyorum.
@@ -15,14 +17,13 @@
     <p>Şu anda da eski bilgilerimi tekrar etmek ve aktif bir repoya sahip olmak için Kodluyoruz Front-End 101 eğitimi alıyorum.</p>
 
     <h2>İlgilendiğim Alanlar</h2>
-    <p>Yazılım ve İşaretleme Dilleri</p>
+    <p>Front-End Development</p>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
-        <li>C</li>
-        <li>C#</li>
-        <li>MySQL</li>
+        <li>Bootstrap</li>
     </ul>
+   
 </body>
 </html>
