yorum satirina hatirlatma eklendi

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,7 @@
     <p>Şu anda da eski bilgilerimi tekrar etmek ve aktif bir repoya sahip olmak için Kodluyoruz Front-End 101 eğitimi alıyorum.</p>
 
     <h2>İlgilendiğim Alanlar</h2>
+    
     <p>Front-End Development</p>
     <ul>
         <li>HTML</li>
@@ -24,6 +25,7 @@
         <li>JavaScript</li>
         <li>Bootstrap</li>
     </ul>
+    <!-- Back-End Bölümünü Sonra Eklemeyi Unutma-->
    
 </body>
 </html>
