--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
     <!-- Kendimden Bahsedeceğim Bölüm-->
     <h2>Hakkımda</h2>
     <p>Ben Çağrı Orcan. 23 yaşındayım. Beykent Üniversitesi Yönetim Bilişim Sistemleri 4.sınıf öğrencisiyim. 
-        ebebek Everest Yolculuğu Programı kapsamında part-time olarak çalışıyorum.
+        ebebek Everest Yolculuğu Yetenek ve Kariyer Programı kapsamında part-time olarak çalışıyorum.
     </p>
     <p>Şu anda da eski bilgilerimi tekrar etmek ve aktif bir repoya sahip olmak için Kodluyoruz Front-End 101 eğitimi alıyorum.</p>
 
