dizi ve film basligi eklendi

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,6 +25,7 @@
         <li>JavaScript</li>
         <li>Bootstrap</li>
     </ul>
+    <h2>Sevdiğim Diziler ve Filmler</h2>
     <!-- Back-End Bölümünü Sonra Eklemeyi Unutma-->
    
 </body>
