--- a/HTML/index.html
+++ b/HTML/index.html
@@ -67,8 +67,8 @@
         <div id="Kitap">
         <li>Kitaplar
             <ul>
-                <li>To Kill a Mockingbird</li>
-                <li>Lord Of The Rings</li>
+                <li><span style="color:green">To Kill a Mockingbird</span></li>
+                <li><span style="color:red">Lord Of The Rings</span></li>
                 <li>
                     <a href="https://www.goodreads.com/book/show/18144590-the-alchemist?ac=1&from_search=true&qid=szDTtW8zFd&rank=1" target="_blank"><em><strong>Simyaci</strong></em>
                     </a>
